# lab_control

./: .gitignore  QUICKSTART.md  README.md  gui_main.py  main.py  pyproject.toml  requirements.txt  tmp_command_runner.ipynb
.github/: 00_project_setup.instructions.md  01_kdc101.instructions.md  02_pm100d.instructions.md  03_e36300.instructions.md  04_gsm20h10.instructions.md  05_picoharp300.instructions.md  06_experiments.instructions.md  copilot-instructions.md
config/: instruments.yaml  instruments_mac.yaml
docs/: GUI_CROSS_PLATFORM.md  GUI_FIXES_AND_ROADMAP.md  GUI_INSTRUMENTS.md  GUI_PHASE3_PLAN.md  GUI_SPEC.md  GUI_TASKS.md
experiments/: gsm_monitor.py  iv_curve.py  resistance_log.py  rotation_sweep.py  tcspc_scan.py
gui/: __init__.py  main_window.py  workers.py
gui/instruments/: __init__.py  e36300_panel.py  gsm20h10_panel.py  kinesis_panel.py  pm100d_panel.py  workers.py
gui/tabs/: __init__.py  gsm_monitor_tab.py  iv_curve_tab.py  resistance_log_tab.py  rotation_sweep_tab.py  tcspc_scan_tab.py
gui/widgets/: __init__.py  config_editor.py  connections_widget.py  log_viewer.py
instruments/: __init__.py  base.py  e36300.py  flipper.py  gsm20h10.py  kdc101.py  picoharp300.py  pm100d.py
tests/: test_e36300.py  test_flipper.py  test_gsm20h10.py  test_gsm_monitor.py  test_gui_smoke.py  test_kdc101.py  test_part2_abort.py  test_picoharp300.py  test_pm100d.py  test_resistance_log.py  test_rotation_sweep.py
tests/manual/: test_e36300_live.py  test_flipper_live.py  test_gsm20h10_live.py  (+3 more)
utils/: __init__.py  data_writer.py  logger.py  plotter.py
