[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab_control"
version = "0.1.0"
requires-python = ">=3.10"

[project.scripts]
lab-gui = "gui_main:main"

[tool.setuptools.packages.find]
include = ["gui*", "instruments*", "experiments*", "utils*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
norecursedirs = ["tests/manual"]

[tool.pylance]
pythonVersion = "3.10"